adding isAdult variable
